--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <a href="/page2.html">Other page</a>
     </nav>
     <main>
-      <h1>Home page</h1>
+      <h1>hello world!</h1>
+      <p>привет из алгоритмики!</p>
     </main>
   </body>
 </html>
